{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 62,
  "lineage": "3a70635a-a646-f681-e7e1-616362775aa6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": true,
            "allow_global_access": true,
            "backend_service": "projects/host-4502127/regions/us-west2/backendServices/wusmw-backend",
            "creation_timestamp": "2021-11-30T17:21:59.585-08:00",
            "id": "projects/host-4502127/regions/us-west2/forwardingRules/wusmw-internal-lb",
            "ip_address": "10.0.2.4",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "wusmw-internal-lb",
            "network": "projects/host-4502127/global/networks/wusmw-trust-vpc",
            "network_tier": "PREMIUM",
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/forwardingRules/wusmw-internal-lb",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_health_check.internal_lb",
            "google_compute_region_backend_service.internal_lb",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.main",
            "module.vmseries.google_compute_instance_group.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "projects/host-4502127/regions/us-west2/backendServices/wusmw-public-lb-backend",
            "creation_timestamp": "2021-11-30T17:21:59.481-08:00",
            "id": "projects/host-4502127/regions/us-west2/forwardingRules/wusmw-public-lb",
            "ip_address": "34.102.30.128",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wusmw-public-lb",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/forwardingRules/wusmw-public-lb"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_region_backend_service.public_lb",
            "google_compute_region_health_check.public_lb",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.main",
            "module.vmseries.google_compute_instance_group.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "spoke1_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": true,
            "backend_service": "projects/host-4502127/regions/us-west2/backendServices/wusmw-backend-spoke1",
            "creation_timestamp": "2021-11-30T17:21:31.488-08:00",
            "id": "projects/host-4502127/regions/us-west2/forwardingRules/wusmw-internal-lb-spoke1",
            "ip_address": "10.1.0.10",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "wusmw-internal-lb-spoke1",
            "network": "projects/host-4502127/global/networks/wusmw-spoke1-vpc",
            "network_tier": "PREMIUM",
            "ports": [
              "80"
            ],
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/forwardingRules/wusmw-internal-lb-spoke1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/spoke1-us-west2"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_health_check.spoke1_lb",
            "google_compute_instance.spoke1_vm1",
            "google_compute_instance.spoke1_vm2",
            "google_compute_instance_group.spoke1_lb",
            "google_compute_region_backend_service.spoke1_lb",
            "module.vpc_spoke1.google_compute_network.main",
            "module.vpc_spoke1.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spoke1_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/disks/wusmw-spoke1-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/host-4502127/zones/us-west2-a/instances/wusmw-spoke1-vm1",
            "instance_id": "8232947388986913541",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "demouser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC6vfWuxOIVkfcEHlA96jW5s6EDxmyc3tDIfuuRiB5ACUXlqDurUVdbSXoeP94R5q2o2ig79krAQ5jF+puq49/Fz8SXYLOcrzcqpP8x9gMt+Q1ODQACOuME7T28D95H8y898zkXrgE2fYdA3QVPdFb/rFnDZ7Bgbm9lZ7+2HDHf6FOCFkjUeh9r32wyJcxbAycNlDlIHJlJEzUBZYBEcgJT32UdlidLSNknovSUIy8+QvA1v+hSsg0S2oG0RA6nzHq51SvARTc63SMHa3Bv4w1myH2WR8B+SZVB3GLa8P9D89o6PDfRQVTfxO9eJWOX9iMiN4Dv0IWVVkqFSRTzIEw14s4cUcTDEwXMN3kJDU+3ya36bZqF6omXI9yt8QzrFeol67v61Dujp/Q8dDr2OMxzfcUpIOdIBhQBCJr/SF9t [...]
            },
            "metadata_fingerprint": "d4DoxkcLNvc=",
            "name": "wusmw-spoke1-vm1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke1-vpc",
                "network_ip": "10.1.0.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/spoke1-us-west2",
                "subnetwork_project": "host-4502127"
              }
            ],
            "project": "host-4502127",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instances/wusmw-spoke1-vm1",
            "service_account": [
              {
                "email": "357308197253-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.vpc_spoke1.google_compute_network.main",
            "module.vpc_spoke1.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spoke1_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/disks/wusmw-spoke1-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/host-4502127/zones/us-west2-a/instances/wusmw-spoke1-vm2",
            "instance_id": "4028805843704836869",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "demouser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC6vfWuxOIVkfcEHlA96jW5s6EDxmyc3tDIfuuRiB5ACUXlqDurUVdbSXoeP94R5q2o2ig79krAQ5jF+puq49/Fz8SXYLOcrzcqpP8x9gMt+Q1ODQACOuME7T28D95H8y898zkXrgE2fYdA3QVPdFb/rFnDZ7Bgbm9lZ7+2HDHf6FOCFkjUeh9r32wyJcxbAycNlDlIHJlJEzUBZYBEcgJT32UdlidLSNknovSUIy8+QvA1v+hSsg0S2oG0RA6nzHq51SvARTc63SMHa3Bv4w1myH2WR8B+SZVB3GLa8P9D89o6PDfRQVTfxO9eJWOX9iMiN4Dv0IWVVkqFSRTzIEw14s4cUcTDEwXMN3kJDU+3ya36bZqF6omXI9yt8QzrFeol67v61Dujp/Q8dDr2OMxzfcUpIOdIBhQBCJr/SF9t [...]
            },
            "metadata_fingerprint": "d4DoxkcLNvc=",
            "name": "wusmw-spoke1-vm2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke1-vpc",
                "network_ip": "10.1.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/spoke1-us-west2",
                "subnetwork_project": "host-4502127"
              }
            ],
            "project": "host-4502127",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instances/wusmw-spoke1-vm2",
            "service_account": [
              {
                "email": "357308197253-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.vpc_spoke1.google_compute_network.main",
            "module.vpc_spoke1.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spoke2_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/panw-gcp-team-testing/global/images/ubuntu-2004-lts-apache",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/disks/wusmw-spoke2-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/host-4502127/zones/us-west2-a/instances/wusmw-spoke2-vm1",
            "instance_id": "321143645754061595",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "serial-port-enable": "true",
              "ssh-keys": "demouser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC6vfWuxOIVkfcEHlA96jW5s6EDxmyc3tDIfuuRiB5ACUXlqDurUVdbSXoeP94R5q2o2ig79krAQ5jF+puq49/Fz8SXYLOcrzcqpP8x9gMt+Q1ODQACOuME7T28D95H8y898zkXrgE2fYdA3QVPdFb/rFnDZ7Bgbm9lZ7+2HDHf6FOCFkjUeh9r32wyJcxbAycNlDlIHJlJEzUBZYBEcgJT32UdlidLSNknovSUIy8+QvA1v+hSsg0S2oG0RA6nzHq51SvARTc63SMHa3Bv4w1myH2WR8B+SZVB3GLa8P9D89o6PDfRQVTfxO9eJWOX9iMiN4Dv0IWVVkqFSRTzIEw14s4cUcTDEwXMN3kJDU+3ya36bZqF6omXI9yt8QzrFeol67v61Dujp/Q8dDr2OMxzfcUpIOdIBhQBCJr/SF9t [...]
            },
            "metadata_fingerprint": "d4DoxkcLNvc=",
            "name": "wusmw-spoke2-vm1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke2-vpc",
                "network_ip": "10.2.0.10",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/spoke2-us-west2",
                "subnetwork_project": "host-4502127"
              }
            ],
            "project": "host-4502127",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instances/wusmw-spoke2-vm1",
            "service_account": [
              {
                "email": "357308197253-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.vpc_spoke2.google_compute_network.main",
            "module.vpc_spoke2.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instanceGroups/wusmw-vmseries01-us-west2-a-ig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instanceGroups/wusmw-vmseries02-us-west2-a-ig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2021-11-30T17:21:46.509-08:00",
            "enable_cdn": false,
            "fingerprint": "oJ-hMvtrXI4=",
            "health_checks": [
              "projects/host-4502127/global/healthChecks/wusmw-hc-tcp80"
            ],
            "id": "projects/host-4502127/regions/us-west2/backendServices/wusmw-backend",
            "load_balancing_scheme": "INTERNAL",
            "name": "wusmw-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc",
            "project": "host-4502127",
            "protocol": "TCP",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/backendServices/wusmw-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_health_check.internal_lb",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.main",
            "module.vmseries.google_compute_instance_group.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instanceGroups/wusmw-vmseries01-us-west2-a-ig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instanceGroups/wusmw-vmseries02-us-west2-a-ig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2021-11-30T17:21:46.492-08:00",
            "enable_cdn": false,
            "fingerprint": "Z0j7rHiYkF8=",
            "health_checks": [
              "projects/host-4502127/regions/us-west2/healthChecks/wusmw-hc-tcp80"
            ],
            "id": "projects/host-4502127/regions/us-west2/backendServices/wusmw-public-lb-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "wusmw-public-lb-backend",
            "port_name": "http",
            "project": "host-4502127",
            "protocol": "TCP",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/backendServices/wusmw-public-lb-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_region_health_check.public_lb",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.main",
            "module.vmseries.google_compute_instance_group.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "spoke1_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instanceGroups/wusmw-ig-spoke1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2021-11-30T17:21:18.778-08:00",
            "enable_cdn": false,
            "fingerprint": "_XW_stGpa1Q=",
            "health_checks": [
              "projects/host-4502127/global/healthChecks/wusmw-hc-tcp80-spoke1"
            ],
            "id": "projects/host-4502127/regions/us-west2/backendServices/wusmw-backend-spoke1",
            "load_balancing_scheme": "INTERNAL",
            "name": "wusmw-backend-spoke1",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke1-vpc",
            "project": "host-4502127",
            "protocol": "TCP",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/backendServices/wusmw-backend-spoke1",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_health_check.spoke1_lb",
            "google_compute_instance.spoke1_vm1",
            "google_compute_instance.spoke1_vm2",
            "google_compute_instance_group.spoke1_lb",
            "module.vpc_spoke1.google_compute_network.main",
            "module.vpc_spoke1.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/host-4502127/global/routes/wusmw-route",
            "name": "wusmw-route",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc",
            "next_hop_gateway": "",
            "next_hop_ilb": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/forwardingRules/wusmw-internal-lb",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "10.0.2.4",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "host-4502127",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/routes/wusmw-route",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_zones.main",
            "google_compute_forwarding_rule.internal_lb",
            "google_compute_health_check.internal_lb",
            "google_compute_region_backend_service.internal_lb",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vmseries.google_compute_instance.main",
            "module.vmseries.google_compute_instance_group.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "vmseries01-0",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.1.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2",
            "ip_cidr_range": "10.0.1.0/28",
            "name": "untrust-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-untrust-vpc",
            "private_ip_google_access": false,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2"
          }
        },
        {
          "index_key": "vmseries01-1",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2",
            "ip_cidr_range": "10.0.0.0/28",
            "name": "mgmt-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-mgmt-vpc",
            "private_ip_google_access": false,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2"
          }
        },
        {
          "index_key": "vmseries01-2",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.2.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2",
            "ip_cidr_range": "10.0.2.0/28",
            "name": "trust-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc",
            "private_ip_google_access": false,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2"
          }
        },
        {
          "index_key": "vmseries02-0",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.1.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2",
            "ip_cidr_range": "10.0.1.0/28",
            "name": "untrust-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-untrust-vpc",
            "private_ip_google_access": false,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2"
          }
        },
        {
          "index_key": "vmseries02-1",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2",
            "ip_cidr_range": "10.0.0.0/28",
            "name": "mgmt-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-mgmt-vpc",
            "private_ip_google_access": false,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2"
          }
        },
        {
          "index_key": "vmseries02-2",
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.2.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2",
            "ip_cidr_range": "10.0.2.0/28",
            "name": "trust-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc",
            "private_ip_google_access": false,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2"
          }
        }
      ]
    },
    {
      "module": "module.vmseries",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "vmseries01-0",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T17:20:53.467-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic0",
            "name": "wusmw-vmseries01-nic0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "purpose": "GCE_ENDPOINT",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic0",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries01-1",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T17:20:53.461-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic1",
            "name": "wusmw-vmseries01-nic1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "purpose": "GCE_ENDPOINT",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries01-2",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.2.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T17:20:53.455-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic2",
            "name": "wusmw-vmseries01-nic2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "purpose": "GCE_ENDPOINT",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries02-0",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.1.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T17:20:55.389-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic0",
            "name": "wusmw-vmseries02-nic0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "purpose": "GCE_ENDPOINT",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic0",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries02-1",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T17:20:56.220-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic1",
            "name": "wusmw-vmseries02-nic1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "purpose": "GCE_ENDPOINT",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries02-2",
          "schema_version": 0,
          "attributes": {
            "address": "10.0.2.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T17:20:53.472-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic2",
            "name": "wusmw-vmseries02-nic2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "purpose": "GCE_ENDPOINT",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "vmseries01-0",
          "schema_version": 0,
          "attributes": {
            "address": "34.94.102.153",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-30T17:20:53.494-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic0-public",
            "name": "wusmw-vmseries01-nic0-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic0-public"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries01-1",
          "schema_version": 0,
          "attributes": {
            "address": "34.94.231.229",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-30T17:20:53.480-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic1-public",
            "name": "wusmw-vmseries01-nic1-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries01-nic1-public"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries02-0",
          "schema_version": 0,
          "attributes": {
            "address": "35.236.116.204",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-30T17:21:05.666-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic0-public",
            "name": "wusmw-vmseries02-nic0-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic0-public"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries02-1",
          "schema_version": 0,
          "attributes": {
            "address": "34.94.191.255",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-30T17:20:53.370-08:00",
            "id": "projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic1-public",
            "name": "wusmw-vmseries02-nic1-public",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "host-4502127",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/addresses/wusmw-vmseries02-nic1-public"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "vmseries01",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/paloaltonetworksgcp-public/global/images/vmseries-flex-bundle2-1010",
                    "size": 60,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/disks/wusmw-vmseries01"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/host-4502127/zones/us-west2-a/instances/wusmw-vmseries01",
            "instance_id": "8650699517631099105",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "mgmt-interface-swap": "enable",
              "serial-port-enable": "true",
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC6vfWuxOIVkfcEHlA96jW5s6EDxmyc3tDIfuuRiB5ACUXlqDurUVdbSXoeP94R5q2o2ig79krAQ5jF+puq49/Fz8SXYLOcrzcqpP8x9gMt+Q1ODQACOuME7T28D95H8y898zkXrgE2fYdA3QVPdFb/rFnDZ7Bgbm9lZ7+2HDHf6FOCFkjUeh9r32wyJcxbAycNlDlIHJlJEzUBZYBEcgJT32UdlidLSNknovSUIy8+QvA1v+hSsg0S2oG0RA6nzHq51SvARTc63SMHa3Bv4w1myH2WR8B+SZVB3GLa8P9D89o6PDfRQVTfxO9eJWOX9iMiN4Dv0IWVVkqFSRTzIEw14s4cUcTDEwXMN3kJDU+3ya36bZqF6omXI9yt8QzrFeol67v61Dujp/Q8dDr2OMxzfcUpIOdIBhQBCJr/SF9tSlx [...]
              "vmseries-bootstrap-gce-storagebucket": "vmseries-demo-bootstrap833c7bdld585vi60szjhdsjc1"
            },
            "metadata_fingerprint": "96r2gSY22jM=",
            "min_cpu_platform": "Intel Broadwell",
            "name": "wusmw-vmseries01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.94.102.153",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-untrust-vpc",
                "network_ip": "10.0.1.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2",
                "subnetwork_project": "host-4502127"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.94.231.229",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-mgmt-vpc",
                "network_ip": "10.0.0.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2",
                "subnetwork_project": "host-4502127"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc",
                "network_ip": "10.0.2.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2",
                "subnetwork_project": "host-4502127"
              }
            ],
            "project": "host-4502127",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instances/wusmw-vmseries01",
            "service_account": [
              {
                "email": "357308197253-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        },
        {
          "index_key": "vmseries02",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/paloaltonetworksgcp-public/global/images/vmseries-flex-bundle2-1010",
                    "size": 60,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/disks/wusmw-vmseries02"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/host-4502127/zones/us-west2-a/instances/wusmw-vmseries02",
            "instance_id": "5953028480249327841",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "mgmt-interface-swap": "enable",
              "serial-port-enable": "true",
              "ssh-keys": "admin:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC6vfWuxOIVkfcEHlA96jW5s6EDxmyc3tDIfuuRiB5ACUXlqDurUVdbSXoeP94R5q2o2ig79krAQ5jF+puq49/Fz8SXYLOcrzcqpP8x9gMt+Q1ODQACOuME7T28D95H8y898zkXrgE2fYdA3QVPdFb/rFnDZ7Bgbm9lZ7+2HDHf6FOCFkjUeh9r32wyJcxbAycNlDlIHJlJEzUBZYBEcgJT32UdlidLSNknovSUIy8+QvA1v+hSsg0S2oG0RA6nzHq51SvARTc63SMHa3Bv4w1myH2WR8B+SZVB3GLa8P9D89o6PDfRQVTfxO9eJWOX9iMiN4Dv0IWVVkqFSRTzIEw14s4cUcTDEwXMN3kJDU+3ya36bZqF6omXI9yt8QzrFeol67v61Dujp/Q8dDr2OMxzfcUpIOdIBhQBCJr/SF9tSlx [...]
              "vmseries-bootstrap-gce-storagebucket": "vmseries-demo-bootstrap833c7bdld585vi60szjhdsjc1"
            },
            "metadata_fingerprint": "96r2gSY22jM=",
            "min_cpu_platform": "Intel Broadwell",
            "name": "wusmw-vmseries02",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.236.116.204",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-untrust-vpc",
                "network_ip": "10.0.1.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2",
                "subnetwork_project": "host-4502127"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.94.191.255",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-mgmt-vpc",
                "network_ip": "10.0.0.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2",
                "subnetwork_project": "host-4502127"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc",
                "network_ip": "10.0.2.3",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2",
                "subnetwork_project": "host-4502127"
              }
            ],
            "project": "host-4502127",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/zones/us-west2-a/instances/wusmw-vmseries02",
            "service_account": [
              {
                "email": "357308197253-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud.useraccounts.readonly",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "data.google_compute_zones.main",
            "module.bootstrap.google_storage_bucket.bootstrap",
            "module.bootstrap.google_storage_bucket_object.config_empty",
            "module.bootstrap.google_storage_bucket_object.config_full",
            "module.bootstrap.google_storage_bucket_object.content_empty",
            "module.bootstrap.google_storage_bucket_object.content_full",
            "module.bootstrap.google_storage_bucket_object.license_empty",
            "module.bootstrap.google_storage_bucket_object.license_full",
            "module.bootstrap.google_storage_bucket_object.plugins_empty",
            "module.bootstrap.google_storage_bucket_object.plugins_full",
            "module.bootstrap.google_storage_bucket_object.software_empty",
            "module.bootstrap.google_storage_bucket_object.software_full",
            "module.bootstrap.local_file.authcodes",
            "module.bootstrap.random_string.randomstring",
            "module.vmseries.data.google_compute_subnetwork.main",
            "module.vmseries.google_compute_address.private",
            "module.vmseries.google_compute_address.public",
            "module.vpc_mgmt.google_compute_network.main",
            "module.vpc_mgmt.google_compute_subnetwork.main",
            "module.vpc_trust.google_compute_network.main",
            "module.vpc_trust.google_compute_subnetwork.main",
            "module.vpc_untrust.google_compute_network.main",
            "module.vpc_untrust.google_compute_subnetwork.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mgmt",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "22"
                ],
                "protocol": "TCP"
              }
            ],
            "creation_timestamp": "2021-11-30T17:20:07.721-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-4502127/global/firewalls/wusmw-mgmt-vpc-ingress",
            "log_config": [],
            "name": "wusmw-mgmt-vpc-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-mgmt-vpc",
            "priority": 1000,
            "project": "host-4502127",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/firewalls/wusmw-mgmt-vpc-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_mgmt.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mgmt",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/host-4502127/global/networks/wusmw-mgmt-vpc",
            "mtu": 0,
            "name": "wusmw-mgmt-vpc",
            "project": "host-4502127",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-mgmt-vpc"
          },
          "dependencies": [
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mgmt",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "mgmt-us-west2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T17:20:08.191-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2",
            "ip_cidr_range": "10.0.0.0/28",
            "name": "mgmt-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-mgmt-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-4502127",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/mgmt-us-west2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_mgmt.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-11-30T17:20:19.705-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-4502127/global/firewalls/wusmw-spoke1-vpc-ingress",
            "log_config": [],
            "name": "wusmw-spoke1-vpc-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke1-vpc",
            "priority": 1000,
            "project": "host-4502127",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/firewalls/wusmw-spoke1-vpc-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spoke1.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke1",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/host-4502127/global/networks/wusmw-spoke1-vpc",
            "mtu": 0,
            "name": "wusmw-spoke1-vpc",
            "project": "host-4502127",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke1-vpc"
          },
          "dependencies": [
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "spoke1-us-west2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T17:20:19.953-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/spoke1-us-west2",
            "ip_cidr_range": "10.1.0.0/28",
            "name": "spoke1-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke1-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-4502127",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/spoke1-us-west2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_spoke1.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke2",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-11-30T17:20:09.054-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-4502127/global/firewalls/wusmw-spoke2-vpc-ingress",
            "log_config": [],
            "name": "wusmw-spoke2-vpc-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke2-vpc",
            "priority": 1000,
            "project": "host-4502127",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/firewalls/wusmw-spoke2-vpc-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spoke2.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke2",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/host-4502127/global/networks/wusmw-spoke2-vpc",
            "mtu": 0,
            "name": "wusmw-spoke2-vpc",
            "project": "host-4502127",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke2-vpc"
          },
          "dependencies": [
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spoke2",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "spoke2-us-west2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T17:20:09.440-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/spoke2-us-west2",
            "ip_cidr_range": "10.2.0.0/28",
            "name": "spoke2-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-spoke2-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-4502127",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/spoke2-us-west2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_spoke2.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_trust",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-11-30T17:20:09.188-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-4502127/global/firewalls/wusmw-trust-vpc-ingress",
            "log_config": [],
            "name": "wusmw-trust-vpc-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc",
            "priority": 1000,
            "project": "host-4502127",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/firewalls/wusmw-trust-vpc-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_trust.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_trust",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/host-4502127/global/networks/wusmw-trust-vpc",
            "mtu": 0,
            "name": "wusmw-trust-vpc",
            "project": "host-4502127",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc"
          },
          "dependencies": [
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_trust",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "trust-us-west2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T17:20:09.462-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2",
            "ip_cidr_range": "10.0.2.0/28",
            "name": "trust-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-trust-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-4502127",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/trust-us-west2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_trust.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_untrust",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-11-30T17:20:07.745-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-4502127/global/firewalls/wusmw-untrust-vpc-ingress",
            "log_config": [],
            "name": "wusmw-untrust-vpc-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-untrust-vpc",
            "priority": 1000,
            "project": "host-4502127",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/firewalls/wusmw-untrust-vpc-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_untrust.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_untrust",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/host-4502127/global/networks/wusmw-untrust-vpc",
            "mtu": 0,
            "name": "wusmw-untrust-vpc",
            "project": "host-4502127",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-untrust-vpc"
          },
          "dependencies": [
            "random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_untrust",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "untrust-us-west2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T17:20:08.202-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2",
            "ip_cidr_range": "10.0.1.0/28",
            "name": "untrust-us-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/host-4502127/global/networks/wusmw-untrust-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "host-4502127",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-4502127/regions/us-west2/subnetworks/untrust-us-west2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_untrust.google_compute_network.main",
            "random_string.main"
          ]
        }
      ]
    }
  ]
}